Bug 384568 - Edit user menu dialogue half inaccessible and window does not obey window rules or application settings
Summary: Edit user menu dialogue half inaccessible and window does not obey window rul...
Status: RESOLVED FIXED
Alias: None
Product: kile
Classification: Applications
Component: user interface (other bugs)
Version First Reported In: 2.9.91
Platform: Arch Linux Linux
: NOR major
Target Milestone: ---
Assignee: Michel Ludwig
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-09-10 17:58 UTC by reescf
Modified: 2017-10-07 13:17 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description reescf 2017-09-10 17:58:04 UTC
The dialogue window which is opened via the 'Edit user menu' menu option is only partly accessible. In fact, I only discovered the bottom half exists by looking in the user menu at the pictures.

On my screen, the dialogue should be at most 714 pixels tall, but is 865 and refuses to be smaller. All attempts to enforce a sensible size using the window manager (KDE/Plasma) - e.g. setting the size, setting a maximum size, setting 'maximise vertically', setting force geometry, setting ignore requested geometry, any other thing I could think of - fail. If I have forced maximisation vertically for the window, I'm completely stuck. It is 865 and nothing doing. If I don't enforce this via a rule, I can make a bit more of it visible by applying 'Maximise' to the individual dialogue window instance when it appears. If I further remove the borders, I can actually access almost everything in the window. However, doing this every time I want to edit the menu is quickly driving me insane.

Note that it might matter that my locale is not English. Consequently, some parts of Kile are displayed in English and some are not. (I guess it depends if a translation is available.) So when I do 'detect window properties', it tells me the type of window in a translated string. However, for that particular window type, only the English translation is available in the window rule dialogue box. However, this doesn't stop me controlling other application windows successfully in KDE, so I wouldn't expect it to stop me controlling Kile's windows. Hence, this seems to be a problem specifically on Kile's side.
Comment 1 Michel Ludwig 2017-10-07 13:17:45 UTC
Git commit 47328b8d1ccb542ce0e81466ceb2a8da46819ffa by Michel Ludwig.
Committed on 07/10/2017 at 13:16.
Pushed by mludwig into branch 'master'.

Shrink the "edit user menu" dialog a little

Also, ensure that is appears centered and add a proper title

M  +6    -3    src/dialogs/usermenu/usermenudialog.cpp
M  +19   -75   src/dialogs/usermenu/usermenudialog_base.ui
M  +2    -0    src/kile.cpp
M  +29   -2    src/utilities.cpp
M  +13   -1    src/utilities.h

https://commits.kde.org/kile/47328b8d1ccb542ce0e81466ceb2a8da46819ffa