Shrink the "edit user menu" dialog a little

Also, ensure that is appears centered and add a proper title

BUG: 384568